--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "ptrofimov/xpmock": "^1.1",
         "dhii/php-cs-fixer-config": "^0.1",
         "codeclimate/php-test-reporter": "<=0.3.2",
+        "php-vfs/php-vfs": "^1.3.1",
         "dhii/stringable-interface": "^0.1"
     },
     "autoload": {
