--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": "^5.4 | ^7.0",
         "dhii/output-renderer-interface": "^0.2",
         "dhii/output-renderer-base": "dev-task/initial-classes",
-        "dhii/output-renderer-abstract": "dev-release/0.1"
+        "dhii/output-renderer-abstract": "dev-release/0.1",
+        "dhii/validation-interface": "dev-release/0.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
