--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,6 @@
     "require": {
         "php": "^5.4 | ^7.0",
         "dhii/output-renderer-interface": "^0.2",
-        "dhii/output-renderer-base": "dev-task/initial-classes",
-        "dhii/output-renderer-abstract": "dev-release/0.1",
         "dhii/validation-interface": "dev-release/0.2"
     },
     "require-dev": {
@@ -24,7 +22,8 @@
         "dhii/php-cs-fixer-config": "^0.1",
         "codeclimate/php-test-reporter": "<=0.3.2",
         "php-vfs/php-vfs": "^1.3.1",
-        "dhii/stringable-interface": "^0.1"
+        "dhii/stringable-interface": "^0.1",
+        "psr/container": "^1.0"
     },
     "autoload": {
         "psr-4": {
