--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
     "prefer-stable": true,
     "require": {
         "php": "^5.4 | ^7.0",
-        "dhii/output-renderer-interface": "^0.2",
-        "dhii/validation-interface": "dev-release/0.2"
+        "dhii/output-renderer-interface": "^0.2 | ^0.3-alpha1",
+        "dhii/validation-interface": "^0.1 | ^0.2-alpha1",
+        "dhii/exception-interface": "^0.2-alpha2"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
