--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@
 /test/coverage/
 /test/log/
 /build/
+/.idea/inspectionProfiles/
+/.idea/dictionaries/
+/.idea/codeStyles/
+/.idea/dataSources/
+/.idea/codeStyleSettings.xml
+/.idea/workspace.xml
+/.idea/tasks.xml
+/.idea/deployment.xml
+/.idea/vagrant.xml
+/.idea/misc.xml
+/.vagrant/
